@@ -1,45 +1,42 @@
 package metro.command;
 
-import metro.algorithm.Node;
+import metro.algorithm.Algorithm;
 import metro.model.StationId;
 import metro.service.MetroService;
 
-import java.util.Deque;
 import java.util.List;
 import java.util.StringJoiner;
-import java.util.function.BiFunction;
 
 import static java.lang.System.Logger.Level.DEBUG;
 
 abstract class RouteCommand extends HyperMetroCommand {
-    private static final System.Logger LOGGER = System.getLogger("RouteCommand");
+    int transferTime = 5;
 
     RouteCommand(final MetroService metroService) {
         super(metroService);
     }
 
-    Deque<Node<StationId>> findRoute(
-            final List<String> parameters,
-            final BiFunction<StationId, StationId, Deque<Node<StationId>>> strategy) {
+    String findRoute(final List<String> parameters, final Algorithm<StationId> algorithm) {
         validateParametersNumber(parameters, REQUIRED_FOUR);
         final var source = new StationId(parameters.get(SOURCE_LINE), parameters.get(SOURCE_NAME));
         final var target = new StationId(parameters.get(TARGET_LINE), parameters.get(TARGET_NAME));
-        return strategy.apply(source, target);
+        final var graph = metroService.getMetroGraph(TRANSFER_TIME);
+        final var route = algorithm.findPath(graph, source, target);
+        return printRoute(route);
     }
 
-    String printRoute(final Deque<Node<StationId>> route) {
+    String printRoute(final List<StationId> route) {
         final var stringJoiner = new StringJoiner(System.lineSeparator());
-        var line = route.getFirst().getId().line();
+        var line = route.get(0).line();
 
         for (final var node : route) {
-            if (!node.getId().line().equals(line)) {
-                line = node.getId().line();
+            if (!node.line().equals(line)) {
+                line = node.line();
                 stringJoiner.add("Transition to line " + line);
             }
-            stringJoiner.add(node.getId().name());
-            LOGGER.log(DEBUG, "Station: {0}, distance: {1}", node.getId().name(), node.getDistance());
+            stringJoiner.add(node.name());
+            LOGGER.log(DEBUG, "Station: {0}", node.name());
         }
         return stringJoiner.toString();
     }
-
 }
